--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cosmostation/cosmos-client",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.1",
   "description": "cosmostation cosmos client",
   "scripts": {
     "tsc": "tsc",
