--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   "dependencies": {
     "@cosmjs/amino": "^0.28.4",
     "@cosmjs/proto-signing": "^0.28.4",
-    "@cosmostation/extension-client": "^0.0.6"
+    "@cosmostation/extension-client": "^0.0.6",
+    "@cosmostation/wc-modal": "^0.0.1",
+    "@walletconnect/client": "^1.7.8",
+    "@walletconnect/utils": "^1.6.5",
+    "@walletconnect/browser-utils": "^1.6.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.5.0",
