--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cosmostation/cosmos-client",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.1",
   "description": "cosmostation cosmos client",
   "scripts": {
     "tsc": "tsc",
@@ -32,9 +32,9 @@
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmostation/extension-client": "^0.0.6",
     "@cosmostation/wc-modal": "^0.0.1",
+    "@walletconnect/browser-utils": "^1.6.5",
     "@walletconnect/client": "^1.7.8",
-    "@walletconnect/utils": "^1.6.5",
-    "@walletconnect/browser-utils": "^1.6.5"
+    "@walletconnect/utils": "^1.6.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.5.0",
